# hyphae

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  clippy.toml  deny.toml
.github/: CODEOWNERS  dependabot.yml
.github/assets/: README.md
.github/workflows/: ci.yml  dependency-review.yml  fuzz.yml  release.yml  security.yml  stress.yml
compatibility/: README.md
compatibility/v1/: data-directory.json
compatibility/v2/: data-directory.json  retrieval-golden-v1.json
conformance/cli/: run.py
conformance/mcp/: run.py
conformance/rust/: Cargo.toml
conformance/rust/src/: main.rs
conformance/v1/: cases.json
contracts/: README.md
contracts/json-schema/: capabilities-v1.schema.json  commit-receipt-v1.schema.json  define-vector-space-request-v1.schema.json  error-v1.schema.json  exact-retrieval-response-v1.schema.json  get-request-v1.schema.json  hybrid-retrieval-request-v1.schema.json  hybrid-retrieval-response-v1.schema.json  proof-v1.schema.json
contracts/openapi/: hyphae-v1.yaml
crates/hyphae-cli/: Cargo.toml  README.md
crates/hyphae-cli/src/: json_value.rs  main.rs  mcp.rs
crates/hyphae-cli/tests/: single_binary.rs
crates/hyphae-client/: Cargo.toml  README.md
crates/hyphae-client/src/: lib.rs
crates/hyphae-contracts/: Cargo.toml  README.md
crates/hyphae-contracts/assets/json-schema/: capabilities-v1.schema.json  define-lexical-index-request-v1.schema.json  delete-request-v1.schema.json  delete-vectors-request-v1.schema.json  exact-retrieval-request-v1.schema.json  get-response-v1.schema.json  health-v1.schema.json  lexical-retrieval-request-v1.schema.json  lexical-retrieval-response-v1.schema.json  put-request-v1.schema.json  put-vectors-request-v1.schema.json  query-request-v1.schema.json  query-response-v1.schema.json  retrieval-proof-v1.schema.json
crates/hyphae-contracts/assets/openapi/: hyphae-v1.yaml
crates/hyphae-contracts/examples/: generate_schemas.rs
crates/hyphae-contracts/src/: lib.rs  v1.rs
crates/hyphae-core/: Cargo.toml  README.md
crates/hyphae-core/src/: lib.rs
crates/hyphae-engine/: Cargo.toml  README.md
crates/hyphae-engine/examples/: benchmark_retrieval_0_2.rs  embedded.rs  generate_disk_format_2_fixture.rs  generate_retrieval_goldens.rs
crates/hyphae-engine/src/: document.rs  facade.rs  lib.rs
crates/hyphae-engine/src/proof/: codec.rs  mod.rs  model.rs  verify.rs
crates/hyphae-engine/src/retrieval_proof/: codec.rs  mod.rs  model.rs  verify.rs
crates/hyphae-engine/tests/: disk_compatibility.rs  large_witness_limits.rs  result_proof.rs
crates/hyphae-query/: Cargo.toml  README.md
crates/hyphae-query/src/: document.rs  engine.rs  lib.rs  model.rs  value.rs
crates/hyphae-query/tests/: reference_properties.rs
crates/hyphae-retrieval/: Cargo.toml  README.md
crates/hyphae-retrieval/src/: canonical.rs  engine.rs  hybrid.rs  lexical.rs  lib.rs  model.rs
crates/hyphae-retrieval/tests/: reference_properties.rs  reference_quality.rs
crates/hyphae-server/: Cargo.toml  README.md
crates/hyphae-server/src/: config.rs  error.rs  lib.rs  server.rs
crates/hyphae-storage/: Cargo.toml  README.md
crates/hyphae-storage/src/: backup.rs  data_directory.rs  engine.rs  index.rs  lib.rs  manifest.rs  mutation.rs  snapshot.rs
crates/hyphae-storage/src/log/: frame.rs  mod.rs
docs/: README.md  configuration.md  development.md  quickstart.md  roadmap-0.2.md  roadmap.md
docs/adr/: 0000-template.md  0001-product-boundary.md  0002-license-and-porting.md  0003-public-contracts.md  0004-durable-authority.md  0005-workspace-boundaries.md  0006-one-binary-one-data-directory.md  0007-query-retrieval-correctness.md  0008-snapshot-witness-result-proofs.md  0009-loopback-first-secure-v1-api.md  0010-generated-clients-and-mcp-stdio.md  0011-optional-host-owned-integrations.md  0012-portable-recovery-and-verifiable-releases.md  0013-durable-vector-records.md  0014-exact-durable-retrieval.md  0015-canonical-retrieval-scoring.md  0016-retrieval-proof-format.md  0017-provider-free-lexical-retrieval.md  0018-deterministic-hybrid-retrieval.md
docs/announcements/: devto-hyphae-0.1.0.md
docs/api/: error-codes-v1.md  v1.md
docs/architecture/: overview.md
docs/cli/: reference.md
docs/clients/: v1.md
docs/compatibility/: versioning.md
docs/concepts/: data-model.md
docs/embedding/: rust.md
docs/gates/: 0.1.0.md  0.2-gate-0.md  0.2.0.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md
docs/integrations/: optional-adapters.md
docs/operations/: backup-restore.md  doctor.md  install-upgrade.md  troubleshooting.md
docs/performance/: retrieval-benchmark-0.2.md
docs/porting/: ledger.md
docs/product/: capabilities.md
docs/provenance/: result-proof-v1.md  retrieval-proof-v1.md
docs/query/: reference-semantics-v1.md
docs/release/: crates-io.md  verification.md
docs/retrieval/: exact-reference-semantics-v2.md  hybrid-reference-semantics-v1.md  lexical-reference-semantics-v1.md  (+1 more)
examples/: README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: document_decode.rs  lexical_hybrid_decode.rs  proof_decode.rs  retrieval_proof_decode.rs  snapshot_verify.rs  vector_request_decode.rs
integrations/: README.md
integrations/pliegors/: Cargo.toml  README.md
integrations/pliegors/src/: lib.rs
mcp/: README.md
packaging/: README.md  finalize_release.py  package.py  provenance.py  test_package.py  verify_install.py
sdks/: README.md
sdks/python/: README.md  pyproject.toml
sdks/python/conformance/: run.py
sdks/python/src/hyphae_sdk/: __init__.py  client.py  generated.py
sdks/python/tests/: test_client.py
tools/: benchmark_score_models.py  check_crate_packages.py  check_documentation.py  check_integration_boundaries.py  generate_compatibility_fixture.py  generate_sdk_models.py  review_dependencies.py  run_conformance.py  run_documentation_examples.py  run_integration_conformance.py  run_load_gate.py  run_retrieval_benchmark.py  run_soak_gate.py  test_review_dependencies.py
(+63 files in other folders)
