[package]
name = "hyphae-conformance-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
hyphae-client.workspace = true
hyphae-contracts.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
