[package]
name = "hyphae-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Single-binary CLI, server, verifier, and MCP adapter for Hyphae."
documentation = "https://docs.rs/hyphae-cli"
publish.workspace = true

[[bin]]
name = "hyphae"
path = "src/main.rs"

[dependencies]
clap.workspace = true
hyphae-client.workspace = true
hyphae-contracts.workspace = true
hyphae-core.workspace = true
hyphae-engine.workspace = true
hyphae-query.workspace = true
hyphae-server.workspace = true
hyphae-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
