[package]
name = "hyphae-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
hyphae-contracts.workspace = true
hyphae-core.workspace = true

[lints]
workspace = true
