[package]
name = "hyphae-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Bounded asynchronous Rust client for the Hyphae /v1 API."
documentation = "https://docs.rs/hyphae-client"
publish.workspace = true

[dependencies]
hyphae-contracts.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
