[package]
name = "hyphae-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dev-dependencies]
serde_json.workspace = true
serde_yaml_ng.workspace = true

[lints]
workspace = true
