[package]
name = "hyphae-contracts"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Versioned OpenAPI and JSON Schema models for the Hyphae /v1 API."
documentation = "https://docs.rs/hyphae-contracts"
publish.workspace = true
include = ["src/**", "assets/**", "examples/**", "README.md"]

[dependencies]
hyphae-query.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_yaml_ng.workspace = true

[lints]
workspace = true
