[package]
name = "hyphae-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Shared version and compatibility constants for the Hyphae data engine."
documentation = "https://docs.rs/hyphae-core"
publish.workspace = true

[lints]
workspace = true
