[package]
name = "hyphae-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
blake3.workspace = true
crc32c.workspace = true
hyphae-query.workspace = true
hyphae-retrieval.workspace = true
hyphae-storage.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
