[package]
name = "hyphae-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Deterministic structured query types and reference execution for Hyphae."
documentation = "https://docs.rs/hyphae-query"
publish.workspace = true

[dependencies]
blake3.workspace = true
crc32c.workspace = true
hyphae-core.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
