[package]
name = "hyphae-retrieval"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Exact provider-neutral vector retrieval with explicit abstention for Hyphae."
documentation = "https://docs.rs/hyphae-retrieval"
publish.workspace = true

[dependencies]
hyphae-core.workspace = true
hyphae-query.workspace = true
libm.workspace = true
thiserror.workspace = true
unicode-casefold.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
