[package]
name = "hyphae-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
blake3.workspace = true
hyphae-contracts.workspace = true
hyphae-core.workspace = true
hyphae-engine.workspace = true
hyphae-query.workspace = true
hyphae-storage.workspace = true
serde.workspace = true
serde_json.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
tower.workspace = true

[lints]
workspace = true
