[package]
name = "hyphae-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Append-only durable local storage, recovery, snapshots, and backups for Hyphae."
documentation = "https://docs.rs/hyphae-storage"
publish.workspace = true

[dependencies]
blake3.workspace = true
crc32c.workspace = true
fs4.workspace = true
hyphae-core.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
