[package]
name = "hyphae-pliegors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
hyphae-client.workspace = true
thiserror.workspace = true

[lints]
workspace = true
