[package]
name = "hyphae-pliegors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Optional public-contract adapter between PliegoRS and Hyphae."
documentation = "https://docs.rs/hyphae-pliegors"
publish.workspace = true

[dependencies]
hyphae-client.workspace = true
thiserror.workspace = true

[lints]
workspace = true
