[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "hyphae-sdk"
version = "0.1.0"
description = "Bounded Python client for the public Hyphae v1 API"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
hyphae_sdk = ["py.typed"]
